--- a/app/views/language/show.html.erb
+++ b/app/views/language/show.html.erb
@@ -22,8 +22,13 @@
     </div>
   </div>
 
-  <div>
-    <%= render "language/helpers/latest" %>
+  <div class = "row">
+    <div class = "col-md-6">
+      <%= render "language/helpers/latest" %>
+    </div>
+    <div class = "col-md-6 offset1">
+      <%= render "language/helpers/authors" %>
+    </div>
   </div>
 
   <div >
