Add paginated author index.

--- a/app/views/language/helpers/_authors.html.erb
+++ b/app/views/language/helpers/_authors.html.erb
@@ -19,4 +19,7 @@
       </div>
     <% end %>
   </div>
+  <div style="padding-top: 15px;">
+    <%= link_to "See more", authors_path(:language => @lang) %><br/><br/>
+  </div>
 <% end %> 
