--- a/app/views/authors/show.html
+++ b/app/views/authors/show.html
@@ -4,6 +4,12 @@
       <div class="col-md-3 col-xs-12 pull-left">
         
         <%=  gravatar_image_tag( @author.email, :alt => @author.name, :class => 'round12', :gravatar => { :size => 200, :default => "#{Settings.instance.server_url}/profile_icon.png" }) %><br/>
+        <% if !@author.homepage.to_s.empty? %>
+          <br/><a href="<%= @author.homepage %>">Homepage</a>
+        <% end %>
+        <% if !@author.role.to_s.empty? %>
+          <br/><span style="font-weight:bold;">Role:</span> <%= @author.role %>
+        <% end %>
 
       </div>  
       <div class="col-md-8 col-xs-12 pull-left">
