Show keywords on the detail pages.

--- a/app/assets/stylesheets/product.scss
+++ b/app/assets/stylesheets/product.scss
@@ -140,3 +140,9 @@ h3.side_header{
   font-size: 30px; 
   font-weight: bold; 
 }
+
+.keyword_tag{
+  font-size: 12px;
+  background-color: #eef0f1;
+  color: #777;
+}
