--- a/app/views/products/_product_show_cocoapods.html.erb
+++ b/app/views/products/_product_show_cocoapods.html.erb
@@ -7,6 +7,7 @@
 <div class="col-md-9 col-sm-8 content_head_top" >
   <%= render 'products/product_show_description' %>
   <%= render 'products/helpers/kpi_summary' %>
+  <%= render 'products/helpers/product_show_keywords' %>
   <%= render 'products/product_show_dependencies' %>
   <%= render 'products/cocoapods/product_show_install' %>
   <%= render 'products/product_show_comments' %>
