--- a/app/views/products/_product_show_npm.html.erb
+++ b/app/views/products/_product_show_npm.html.erb
@@ -5,6 +5,7 @@
 <div class="col-md-9 col-sm-8 content_head_top" >
   <%= render 'products/product_show_description' %>
   <%= render 'products/helpers/kpi_summary' %>
+  <%= render 'products/helpers/product_show_keywords' %>
   <%= render 'products/product_show_dependencies' %>
   <%= render 'products/helpers/npm_snippet' %>
   <%= render 'products/product_show_comments' %>
