--- a/app/views/products/_product_show_packagist.html.erb
+++ b/app/views/products/_product_show_packagist.html.erb
@@ -7,6 +7,7 @@
   <%= render 'products/helpers/security_vulnerabilities' %>
   <%= render 'products/product_show_description' %>
   <%= render 'products/helpers/kpi_summary' %>
+  <%= render 'products/helpers/product_show_keywords' %>
   <%= render 'products/product_show_dependencies' %>
   <%= render 'products/helpers/composer_snippet' %>
   <%= render 'products/product_show_comments' %>
