--- a/app/views/products/_extended_search.html.erb
+++ b/app/views/products/_extended_search.html.erb
@@ -22,19 +22,7 @@
         </div>
       </div>
 
-      <% if !@languages.nil? && !@languages.empty? && !@lang.nil? %>
-        <% @langs = @lang.split(",") %>
-        <% @languages.each do |language| %>
-
-          <div class="checkbox">
-            <label for="<%= language %>" id="label_<%= language %>__">
-              <input id="<%= language %>" type="checkbox" value="<%= language %>" style="height: 16px;" onclick="update_lang(this.value)" <%= "checked='checked'" if @langs.any?{ |s| s.casecmp(language)==0 }  %> >
-              <%= language %>
-            </label>
-          </div>
-          
-        <% end %>
-      <% end %>
+      <%= render "shared/language_checkboxes" %>
 
       <div class="form-group" style = "height: 30px; padding: 10px 0px 20px 0;">
         <div >
