--- a/app/views/keywords/show.html.erb
+++ b/app/views/keywords/show.html.erb
@@ -5,7 +5,7 @@
     <div class="row">
       <div class="col-md-3 col-xs-12 pull-left">
         
-        <%= pluralize(@products.total_entries, 'software library') %> taged with the keyword <span style="font-weight: bold;"><%= params[:id] %></span>
+        <%= pluralize(@products.total_entries, 'software library') %> tagged with the keyword <span style="font-weight: bold;"><%= params[:id] %></span>
 
         <div style="padding-top: 30px;">
 
