--- a/app/views/products/helpers/_edit_navi.html.erb
+++ b/app/views/products/helpers/_edit_navi.html.erb
@@ -4,6 +4,7 @@
   <li><%= link_to 'Description', product_edit_path %></li>
   <li><%= link_to 'Links', product_edit_links_path %></li>
   <li><%= link_to 'Licenses', product_edit_licenses_path %></li>
+  <li><%= link_to 'Keywords', product_edit_keywords_path %></li>
   <li><%= link_to 'Versions', product_edit_versions_path %></li>
   <li><%= link_to 'Auditlogs', product_auditlogs_path %></li>
   <li><a href="<%= product_version_path(@product) %>" class="searchResultLink">Detail view</a></li>
