--- a/app/views/products/helpers/_kpis.html.erb
+++ b/app/views/products/helpers/_kpis.html.erb
@@ -16,8 +16,11 @@
   <div class="kpi_box flash <%= this_color_class %>" style="margin-bottom: 5px;">
     <div>
       <b>This:</b> <%= @product.version %> 
-      <a id="show_versions_link" href="" onClick="return show_versions()" title="Other versions" > <i class="fa fa-arrow-right"></i> </a> 
-      <a id="hide_versions_link" href="" onClick="return hide_versions()" title="Hide other versions" style="display:none;" > <i class="fa fa-arrow-left"></i> </a>
+
+      <a class="btn btn-default btn-xs pull-right" title="other versions" onclick="return show_versions()" href="" id="show_versions_link" style="font-size: 11px; display: inline-block; border: 0px none; line-height: 18px;">show all <i class="fa fa-arrow-down"></i></a>
+
+      <a class="btn btn-default btn-xs pull-right" title="hide other versions" onclick="return hide_versions()" href="" id="hide_versions_link" style="font-size: 11px; display: inline-block; border: 0px none; line-height: 18px; display:none;">hide <i class="fa fa-arrow-up"></i></a>
+
     </div>
     <div id="other_versions" style="display:none;">
       <%= render 'products/product_show_other_versions' %>
