Update FileInput look & feel.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,6 +24,7 @@ $text_link:  #669acb;
 $text_hover: #a0b8cf;
 
 @import "bootstrap_upload.scss";
+@import "jasny-bootstrap.scss";
 @import "sprite.scss";
 @import "colorschema.scss";
 
