--- a/app/views/user/helpers/_stylish_fileupload.html.erb
+++ b/app/views/user/helpers/_stylish_fileupload.html.erb
@@ -1,11 +1,11 @@
 <div >
-  <div class = "fileupload fileupload-new" data-provides="fileupload">
-    <span class = "btn btn-file">
-      <span class = "fileupload-new"> Select project file </span>
-      <span class = "fileupload-exists"> Change file </span>
-      <%= file_field 'upload', 'datafile', :class => "" %>
-    </span>
-    <span class = "fileupload-preview"></span>
-    <a href="#" class="close fileupload-exists" data-dismiss="fileupload" style="float: none">×</a>
-  </div>
+  <div class="fileinput fileinput-new input-group" data-provides="fileinput">
+    <div class="form-control" data-trigger="fileinput"><i class="glyphicon glyphicon-file fileinput-exists"></i> <span class="fileinput-filename"></span></div>
+    <span class="input-group-addon btn btn-default btn-file"><span class="fileinput-new" data-trigger="fileinput">Select file</span><span class="fileinput-exists" data-trigger="fileinput">Change</span><input type="file" name="upload[datafile]" id="upload_datafile"></span>
+    <a href="#" class="input-group-addon btn btn-default fileinput-exists" data-dismiss="fileinput">Remove</a>
+  </div>  
 </div>
+
+<script type="text/javascript">
+  $('.fileinput').fileinput();
+</script>
