--- a/app/views/user/projects/helpers/_project_numbers_sentence.html.erb
+++ b/app/views/user/projects/helpers/_project_numbers_sentence.html.erb
@@ -7,6 +7,12 @@
   <%= project[:out_number_sum] %> outdated.
 </span>
 
+<% if project[:muted_dependencies_count].to_i > 0 %> 
+  <span style="color: orange; font-size: 14px;" >
+    <%= project[:muted_dependencies_count] %> muted.
+  </span>
+<% end %> 
+
 <span style="color: <%= unknown_color(project)%>; font-size: 14px;" >
   <%= project[:unknown_number_sum] %> unknown.
 </span> 
