Add more links to the navigation header.
Adding links to FAQ & Blog to the main navigation.

--- a/app/views/landing_page/index.html.erb
+++ b/app/views/landing_page/index.html.erb
@@ -27,6 +27,16 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
+                    
+                    <li>
+                        <a href="/api" >API</a>
+                    </li>                    
+                    <li>
+                        <a href="http://blog.versioneye.com/" target="versioneye_blog">Blog</a> 
+                    </li>
+                    <li>
+                        <a href="/faq">FAQs</a> 
+                    </li>
 
                   <% if !Rails.env.enterprise? %>
                     <li>
