--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,6 +22,15 @@
         </div>
         <button type="submit" class="btn btn-default">Search</button>
       </form>
+
+      <ul class="nav navbar-nav">
+        <li>
+            <a href="http://blog.versioneye.com/" target="versioneye_blog">Blog</a> 
+        </li>
+        <li>
+            <a href="/faq">FAQs</a> 
+        </li>
+      </ul>
       
       
       <!-- menu for guest user, not logged in -->
