--- a/app/views/products/_product_show_authors.html.erb
+++ b/app/views/products/_product_show_authors.html.erb
@@ -9,6 +9,7 @@
   <div class="box content" >
     <% names = [] %>
     <% authors.each do |author| %>
+      <% next if author.nil? %>
       <% next if names.include?(author.name) %>
       <%= link_to gravatar_image_tag( author.email, 
                       :alt => author.name, 
