--- a/app/views/user/projects/show.html.erb
+++ b/app/views/user/projects/show.html.erb
@@ -94,7 +94,7 @@
         <%= render :partial => "user/projects/helpers/project_numbers_sentence", :locals => { :project => @project, :show_license_number => true } %><br/>
         <%= render :partial => "user/projects/helpers/project_source", :locals => { :project => @project } %>
 
-        <% if current_user && (current_user?(@project.user) || current_user.admin == true || !@project.collaborator(user).nil? ) %>
+        <% if current_user && (current_user?(@project.user) || current_user.admin == true || !@project.collaborator(current_user).nil? ) %>
 
           <div style="font-size: 16px; margin-bottom: 0px;">
             <div class="row">
