--- a/app/views/user/projects/show.html.erb
+++ b/app/views/user/projects/show.html.erb
@@ -94,7 +94,7 @@
         <%= render :partial => "user/projects/helpers/project_numbers_sentence", :locals => { :project => @project, :show_license_number => true } %><br/>
         <%= render :partial => "user/projects/helpers/project_source", :locals => { :project => @project } %>
 
-        <% if current_user && (current_user?(@project.user) || current_user.admin == true || !@project.collaborator(current_user).nil? ) %>
+        <% if project_member?( @project, current_user ) %>
 
           <div style="font-size: 16px; margin-bottom: 0px;">
             <div class="row">
@@ -146,7 +146,7 @@
               <a data-target="#security" data-toggle="tab" onclick="page_view('ga_project_security')"><i class = "fa fa-tasks">&nbsp;</i>Security</a>
             </li>
           <% end %>
-          <% if signed_in? && @project.user && @project.user.id.to_s.eql?( current_user.id.to_s ) %>
+          <% if project_member?( @project, current_user ) %>
             <li>
               <a data-target="#collaborators" data-toggle="tab" onclick="page_view('ga_project_collaborators')"><i class = "fa fa-users">&nbsp;</i>Collaborators</a>
             </li>
@@ -187,7 +187,7 @@
             </div>
           <% end %>
 
-          <% if signed_in? && @project.collaborator?( current_user ) %>
+          <% if project_member?( @project, current_user ) %>
             <div id="collaborators" class="tab-pane" style="min-height: 360px;">
               <%= render partial: "collaborators" %>
             </div>
