--- a/app/views/user/collaborations/helpers/_collaborator_controls.html.erb
+++ b/app/views/user/collaborations/helpers/_collaborator_controls.html.erb
@@ -1,12 +1,12 @@
 <% if !Settings.instance.environment.eql?('enterprise') %>
   <%= button_to(
-        'Remove',
+        'Leave this project',
         user_collaboration_delete_path(collaboration_id: collaboration[:_id].to_s),
         :confirm => 'Are you sure?',
         :class => 'btn btn-mini btn-danger'
       )
   %>
-<% end %> 
+<% end %>
 
 <% if !collaboration[:active] %>
   <%= button_to(
